--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Ross Pittser|Developer|Translator</title>
       <link rel = "stylesheet"
         type = "text/css"
-        href = "css2.css" />
+        href = "css.css" />
        <link rel="shortcut icon" href="src/favicon.ico">
   </head>
 
@@ -13,9 +13,15 @@
     <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
+    <div class="spacer">spacer</div>
+    <div class="spacer">spacer</div>
+    <div class="spacer">spacer</div>
+    <div class="spacer">spacer</div>
 <h1 class="tophead" align="center"> Ross Pittser </h1>
-
-
+    
+	<div>
+	<p align="center" class="filler"> <a href="test.html"> Test lmao </a></p> 
+	</div>
 
     </body>
 
