--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <div class="spacer">spacer</div>
 <h1 class="tophead" align="center"> Ross Pittser </h1>
     
-	<div>
-	<p align="center" class="filler"> <a href="test.html"> Test lmao </a></p> 
-	</div>
+<ul align="center">
+  <li align="center"><a href="default.asp">Home</a></li>
+  <li align="center"><a href="news.asp">News</a></li>
+  <li align="center"><a href="contact.asp">Contact</a></li>
+  <li align="center"><a href="about.asp">About</a></li>
+</ul>
 
     </body>
 
