--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
 <h1 class="tophead" align="center"> Ross Pittser </h1>
-    
+
 <ul align="center">
   <li align="center"><a href="default.asp">Home</a></li>
   <li align="center"><a href="news.asp">News</a></li>
@@ -26,6 +26,10 @@
   <li align="center"><a href="about.asp">About</a></li>
 </ul>
 
+<p align="center"> <a href="pd.html">  > Project Directory </a> </p>
+  <p align="center"> <a href="wp.html"> > Web projects </a> </p>
+    <p align="center"> <a href="gd.html"> > Game Development</a> </p>
+      <p align="center"> <a href="up.html"> > University Project's </a> </p>
     </body>
 
 
