--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <html>
 
 <head>
-    <title>Ross Pittser|Developer|Translator</title>
+    <title>Ross Pittser | Student | Developer</title>
       <link rel = "stylesheet"
         type = "text/css"
         href = "css.css" />
        <link rel="shortcut icon" href="src/favicon.ico">
+       <body background="src/giphy.gif">
   </head>
 
   <body>
-    <div class="spacer">spacer</div>
-    <div class="spacer">spacer</div>
-    <div class="spacer">spacer</div>
-    <div class="spacer">spacer</div>
-    <div class="spacer">spacer</div>
-    <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
 <h1 class="tophead" align="center"> Ross Pittser </h1>
