--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Ross Pittser | Student | Developer</title>
+    <title>Ross Green | Student | Developer</title>
       <link rel = "stylesheet"
         type = "text/css"
         href = "css.css" />
@@ -12,7 +12,7 @@
   <body>
     <div class="spacer">spacer</div>
     <div class="spacer">spacer</div>
-<h1 class="tophead" align="center"> Ross Pittser </h1>
+<h1 class="tophead" align="center"> Ross Green </h1>
 
 <!--
 <ul align="center">
